# mcp-sexpr

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
docs/: developer-guide.md
src/: lib.rs
src/errors/: mod.rs  types.rs
src/extract/: args.rs  mod.rs
src/format/: mod.rs  response.rs
src/interactive/: line_loop.rs  mod.rs
src/log_viewer/: cli.rs  command.rs  mod.rs
src/persistence/: mod.rs  schema.sql  sqlite.rs
src/prompt/: builder.rs  config.rs  markdown.rs  mod.rs
src/router/: mod.rs  patterns.rs
